--- a/ios/MealFlow/Info.plist
+++ b/ios/MealFlow/Info.plist
@@ -7,7 +7,7 @@
     <key>CFBundleDevelopmentRegion</key>
     <string>$(DEVELOPMENT_LANGUAGE)</string>
     <key>CFBundleDisplayName</key>
-    <string>Myexpo-ownerApp</string>
+    <string>MealFlow</string>
     <key>CFBundleExecutable</key>
     <string>$(EXECUTABLE_NAME)</string>
     <key>CFBundleIdentifier</key>
@@ -27,14 +27,14 @@
       <dict>
         <key>CFBundleURLSchemes</key>
         <array>
-          <string>Myexpo-ownerApp</string>
-          <string>com.myexpo.ownerapp.development</string>
+          <string>mealflow</string>
+          <string>com.mealflow.app.development</string>
         </array>
       </dict>
       <dict>
         <key>CFBundleURLSchemes</key>
         <array>
-          <string>exp+obytesapp</string>
+          <string>exp+mealflow</string>
         </array>
       </dict>
     </array>
