--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myobytesapp",
+  "name": "mealflow",
   "version": "0.0.1",
   "private": true,
   "main": "expo-router/entry",
@@ -38,7 +38,7 @@
     "test:ci": "pnpm run test --coverage",
     "test:watch": "pnpm run test --watch",
     "install-maestro": "curl -Ls 'https://get.maestro.mobile.dev' | bash",
-    "e2e-test": "maestro test .maestro/ -e APP_ID=com.obytes.development"
+    "e2e-test": "maestro test .maestro/ -e APP_ID=com.mealflow.app.development"
   },
   "dependencies": {
     "@expo/metro-runtime": "^4.0.1",
@@ -96,6 +96,7 @@
     "@types/i18n-js": "^3.8.9",
     "@types/jest": "^29.5.12",
     "@types/lodash.memoize": "^4.1.9",
+    "@types/node": "^22.13.14",
     "@types/react": "~18.3.12",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
@@ -130,7 +131,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/user/repo-name.git"
+    "url": "git+https://github.com/yourusername/mealflow.git"
   },
   "packageManager": "pnpm@9.12.3",
   "expo": {
