--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "test": "jest",
     "check-all": "pnpm run lint && pnpm run type-check && pnpm run lint:translations && pnpm run test",
     "test:ci": "pnpm run test --coverage",
-    "test:watch": "pnpm run test --watch",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "install-maestro": "curl -Ls 'https://get.maestro.mobile.dev' | bash",
     "e2e-test": "maestro test .maestro/ -e APP_ID=com.mealflow.app.development"
   },
@@ -46,12 +47,15 @@
     "@hookform/resolvers": "^3.9.0",
     "@shopify/flash-list": "1.7.3",
     "@tanstack/react-query": "^5.52.1",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/user-event": "^14.6.1",
     "app-icon-badge": "^0.1.2",
     "axios": "^1.7.5",
     "expo": "~52.0.42",
     "expo-constants": "~17.0.8",
     "expo-font": "~13.0.4",
     "expo-image": "~2.0.7",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-localization": "~16.0.1",
     "expo-router": "~4.0.19",
@@ -92,7 +96,7 @@
     "@expo/config": "~10.0.3",
     "@react-native/gradle-plugin": "0.76.6",
     "@testing-library/jest-dom": "^6.5.0",
-    "@testing-library/react-native": "^12.7.2",
+    "@testing-library/react-native": "^12.4.3",
     "@types/i18n-js": "^3.8.9",
     "@types/jest": "^29.5.12",
     "@types/lodash.memoize": "^4.1.9",
@@ -125,6 +129,7 @@
     "lint-staged": "^15.2.9",
     "np": "^10.0.7",
     "prettier": "^3.3.3",
+    "react-test-renderer": "18.2.0",
     "tailwindcss": "3.4.4",
     "ts-jest": "^29.1.2",
     "typescript": "^5.3.3"
