--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
       "@env": ["./src/lib/env.js"]
     },
     "esModuleInterop": true,
-    "checkJs": true
+    "checkJs": true,
+    "jsx": "react-jsx"
   },
   "exclude": [
     "node_modules",
